fixed hamburger not showing on smaller screens added item and orders route added prisma/schema

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,3 +22,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.hamburger {
+  position: unset;
+  border: 2px solid red;
+}
